# complex_quantum_compute_theory

./: .gitignore  README.md  requirements.txt
figures/: make_figures.py
overleaf_bundle/: main.tex  refs.bib
paper/: main.tex  refs.bib
quantum_results_package/: QA_AUDIT_data.json  QA_REPORT.md  QA_REPORT_data.json  README.md  pyproject.toml
quantum_results_package/data/: fig2_cfr_leakage.csv  fig3_coherent_leakage_curves.csv  fig3_coherent_leakage_random.csv  fig4_discrimination.csv  fig5_perturbative_scaling.csv  sanity_check_summary.csv
quantum_results_package/latex/: caption_fig1_sector_diagram.tex  caption_fig2_cfr_leakage.tex  caption_fig3_coherent_leakage_bound.tex  caption_fig4_sector_parity_discrimination.tex  caption_fig5_perturbative_leakage.tex  figure_captions.tex  figure_includes.tex  generated_results.tex
quantum_results_package/scripts/: audit_source.py  export_results_tex.py  make_all.py  make_figures.py  run_tests.py  write_qa_report.py
quantum_results_package/src/samei/: __init__.py  cfr.py  channels.py  discrimination.py  dynamics.py  leakage.py  linear_algebra.py  moment_matrix.py  realification.py  sectors.py
quantum_results_package/tests/: test_bob_obstruction.py  test_cfr.py  test_discrimination.py  test_dynamics.py  test_embedding.py  test_free_operations.py  test_leakage.py  test_moment_matrix.py  test_realification.py  test_sector_algebra.py  test_trace_distance.py
tests/: conftest.py  test_channels.py  test_discrimination.py  test_dynamics.py  test_examples.py  test_geometry.py  test_leakage.py  test_moment_matrix.py  (+2 more)
(+7 files in other folders)
